[gd_scene load_steps=7 format=3 uid="uid://loa5ks1s5p45"]

[ext_resource type="Script" path="res://Scripts/Settings.gd" id="1_yck21"]
[ext_resource type="AudioStream" uid="uid://jv7aw77nxo8h" path="res://Sound/Music/saxo-255974.mp3" id="2_1iue3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fc837"]
bg_color = Color(0.192157, 0.192157, 0.192157, 0.701961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ufwy"]
content_margin_top = 5.0
content_margin_bottom = 44.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gtngl"]
bg_color = Color(0.394353, 0.394353, 0.394353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y5xew"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yck21")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 164.0
offset_top = 102.0
offset_right = -164.0
offset_bottom = -102.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fc837")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 98
text = "Settings"

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Volume"

[node name="Volume" type="HSlider" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/slider = SubResource("StyleBoxFlat_3ufwy")
min_value = -50.0
max_value = 8.0
step = 0.1
value = 8.0

[node name="Mute" type="CheckBox" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_gtngl")
theme_override_styles/focus = SubResource("StyleBoxFlat_y5xew")
text = "Mute"

[node name="Mouse senetiv" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Mouse sensitivity"

[node name="Mouse sens" type="HSlider" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/slider = SubResource("StyleBoxFlat_3ufwy")
max_value = 1.0
step = 0.01

[node name="ScreenMode2" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Screen Mode"

[node name="ScreenMode" type="OptionButton" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
item_count = 2
selected = 0
popup/item_0/text = "Fullscreen"
popup/item_0/id = 0
popup/item_1/text = "Windowed"
popup/item_1/id = 1

[node name="ScreenResol" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Screen Resolution"

[node name="ScreenResolution" type="OptionButton" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
item_count = 5
selected = 0
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1366x768"
popup/item_2/id = 2
popup/item_3/text = "1360x768"
popup/item_3/id = 3
popup/item_4/text = "1280x720"
popup/item_4/id = 4

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_1iue3")
volume_db = -10.0
autoplay = true

[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="Panel/MarginContainer/VBoxContainer/Mute" to="." method="_on_mute_toggled"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/Mouse sens" to="." method="_on_mouse_sens_value_changed"]
[connection signal="item_selected" from="Panel/MarginContainer/VBoxContainer/ScreenMode" to="." method="_on_screen_mode_item_selected"]
[connection signal="item_selected" from="Panel/MarginContainer/VBoxContainer/ScreenResolution" to="." method="_on_screen_resolution_item_selected"]
